# jirahours_cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-test.yml
src/jirahours/: csv_reader.py  exceptions.py  hour_entries.py  hour_entry.py  jira_backend.py  main.py  model.py  summaries.py  summarizers.py
tests/: csv_reader_test.py  hour_entries_test.py  hour_entry_test.py  main_test.py  model_entry_test.py  model_hours_test.py  summaries_test.py  summarizers_test.py
tests/csv_files/: error_extra_column.csv  error_partly_filled.csv  ok.csv  ok_bom.csv
