[tool.poetry]
name = "jirahours"
version = "0.1.0"
description = "A over-engineered python script to move hours from CSV to Jira."
authors = ["Mikko Kuokkanen <mikko.kuokkanen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.*"
click = "8.3.0"
httpx = "0.28.1"
python-dotenv = "1.1.1"

[tool.poetry.group.dev.dependencies]
black = "25.9.0"
isort = "6.1.0"
pytest = "8.4.2"
pytest-cov = "7.0.0"
mypy = "1.18.2"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.13"
files = ["src", "tests"]
strict = "True"

[tool.poetry.scripts]
jirahours = "jirahours.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
